--- a/Results/training_efficency/valhists_to_excel.ipynb
+++ b/Results/training_efficency/valhists_to_excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +37,8 @@
       "14\n",
       "ViT_MHSAp10_32M_35k_val.pt\n",
       "14\n",
+      "ViT_MHSAp10_60M_35k_val.pt\n",
+      "11\n",
       "ViT_MHSAp10_8M_17k_val.pt\n",
       "14\n",
       "ViT_MHSAp10_8M_35k_val.pt\n",
@@ -57,6 +59,28 @@
     "    q = 1-np.array(torch.load(path+fname))\n",
     "    print(len(q))\n",
     "    val_hist.append(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.73140186, 0.73771059, 0.74041324, 0.74155197, 0.74238372,\n",
+       "       0.74278732, 0.74326984, 0.74359571, 0.74359148, 0.74349363,\n",
+       "       0.74362806])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_hist[-3]"
    ]
   },
   {
