--- a/Results/training_efficency/valhists_to_excel.ipynb
+++ b/Results/training_efficency/valhists_to_excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,41 +14,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unet_124M_17k_val.pt\n",
-      "7\n",
       "Unet_124M_35k_val.pt\n",
-      "7\n",
-      "Unet_31M_17k_val.pt\n",
-      "7\n",
+      "9\n",
+      "Unet_124M_70k_val.pt\n",
+      "9\n",
       "Unet_31M_35k_val.pt\n",
-      "1\n",
-      "Unet_8M_17k_val.pt\n",
-      "7\n",
+      "9\n",
+      "Unet_31M_70k_val.pt\n",
+      "5\n",
       "Unet_8M_35k_val.pt\n",
-      "7\n",
-      "ViT_MHSAp10_32M_17k_val.pt\n",
-      "14\n",
+      "8\n",
+      "Unet_8M_70k_val.pt\n",
+      "8\n",
       "ViT_MHSAp10_32M_35k_val.pt\n",
-      "14\n",
+      "9\n",
+      "ViT_MHSAp10_32M_70k_val.pt\n",
+      "5\n",
       "ViT_MHSAp10_60M_35k_val.pt\n",
-      "11\n",
-      "ViT_MHSAp10_8M_17k_val.pt\n",
-      "14\n",
+      "10\n",
+      "ViT_MHSAp10_60M_70k_val.pt\n",
+      "9\n",
       "ViT_MHSAp10_8M_35k_val.pt\n",
-      "10\n"
+      "8\n",
+      "ViT_MHSAp10_8M_70k_val.pt\n",
+      "8\n"
      ]
     }
    ],
    "source": [
     "# Get filenames from folder\n",
-    "path = \"./knee/\"  # multicoil data (from)\n",
+    "path = \"./brain/\"  # multicoil data (from)\n",
     "filenames = []\n",
     "for file in os.listdir(path):\n",
     "    filenames.append(file)\n",
@@ -63,77 +65,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.73140186, 0.73771059, 0.74041324, 0.74155197, 0.74238372,\n",
-       "       0.74278732, 0.74326984, 0.74359571, 0.74359148, 0.74349363,\n",
-       "       0.74362806])"
+       "array([      -inf, 0.81250176, 0.82069345, 0.82293909, 0.82345955,\n",
+       "       0.82414766, 0.82453752, 0.82495272, 0.82510632, 0.82525316])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "val_hist[-3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nans = float('NaN')*np.ones(4)"
+    "from matplotlib import pyplot as plt\n",
+    "val_hist[8]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = -1\n",
-    "val_hist[idx]= np.concatenate((nans, val_hist[idx]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "array([      -inf, 0.82440745, 0.82614121, 0.82662158, 0.82694099,\n",
+       "       0.82694306, 0.82692571, 0.82679184, 0.82658413])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(val_hist[3])"
+    "val_hist[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_hist_np = np.stack(val_hist)"
+    "val_hist_ = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_hist_.append(val_hist[11][:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.82254719, 0.82432532, 0.82534031, 0.8257592 , 0.82576407,\n",
+       "        0.82574122, 0.82551889, 0.82527426]),\n",
+       " array([0.82440745, 0.82614121, 0.82662158, 0.82694099, 0.82694306,\n",
+       "        0.82692571, 0.82679184, 0.82658413]),\n",
+       " array([0.82052146, 0.82197198, 0.82299277, 0.82332244, 0.82363285,\n",
+       "        0.82379985, 0.82389123, 0.82396089]),\n",
+       " array([0.8210492 , 0.82321124, 0.82391433, 0.82402646, 0.824442  ,\n",
+       "        0.82456649, 0.82471094, 0.82479626]),\n",
+       " array([0.82069345, 0.82293909, 0.82345955, 0.82414766, 0.82453752,\n",
+       "        0.82495272, 0.82510632, 0.82525316]),\n",
+       " array([0.82208091, 0.82467831, 0.82565577, 0.82631242, 0.82674595,\n",
+       "        0.82695177, 0.82722603, 0.82738368]),\n",
+       " array([0.81111144, 0.81589619, 0.81780464, 0.81889134, 0.81995401,\n",
+       "        0.82055195, 0.82106728, 0.82138767]),\n",
+       " array([0.81485748, 0.81930406, 0.82058838, 0.8212971 , 0.82169303,\n",
+       "        0.82217326, 0.82252203, 0.82277677])]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_hist_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_hist_np = np.stack(val_hist_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,32 +182,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.73870676, 0.74067936, 0.73715591,        nan, 0.73670412,\n",
-       "       0.73760633, 0.72029906, 0.7304472 , 0.71865846,        nan])"
+       "array([0.82432532, 0.82614121, 0.82197198, 0.82321124, 0.82293909,\n",
+       "       0.82467831, 0.81589619, 0.81930406])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "val_hist_np[:,0]"
+    "val_hist_np[:,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datak = [17, 35, 17, 35, 17, 35, 17, 35, 17, 35]"
+    "datak = [35, 70, 35, 70, 35, 70, 35, 70,]"
    ]
   },
   {
@@ -181,13 +218,11 @@
    "source": [
     "models = [\n",
     "    'U-Net-124M', \n",
-    "    'U-Net-124M',     \n",
-    "    'U-Net-31M', \n",
-    "    'U-Net-31M',   \n",
+    "    'U-Net-124M',       \n",
     "    'U-Net-8M', \n",
     "    'U-Net-8M',    \n",
-    "    'ViT-32M/10', \n",
-    "    'ViT-32M/10', \n",
+    "    'ViT-60M/10', \n",
+    "    'ViT-60M/10', \n",
     "    'ViT-8M/10', \n",
     "    'ViT-8M/10',     \n",
     "    ]"
@@ -195,21 +230,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = {'Model':models, 'Data in k': datak, 'Epoch 5': val_hist_np[:,0], \n",
     "        'Epoch 10': val_hist_np[:,1], 'Epoch 15': val_hist_np[:,2], 'Epoch 20': val_hist_np[:,3], \n",
-    "        'Epoch 25': val_hist_np[:,4], 'Epoch 30': val_hist_np[:,5], 'Epoch 35': val_hist_np[:,6], 'Epoch 40': val_hist_np[:,7], \n",
-    "        'Epoch 45': val_hist_np[:,8], 'Epoch 50': val_hist_np[:,9], 'Epoch 55': val_hist_np[:,10], 'Epoch 60': val_hist_np[:,11],\n",
-    "        'Epoch 65': val_hist_np[:,12], 'Epoch 70': val_hist_np[:,13]}\n",
+    "        'Epoch 25': val_hist_np[:,4], 'Epoch 30': val_hist_np[:,5], 'Epoch 35': val_hist_np[:,6], 'Epoch 40': val_hist_np[:,7],\n",
+    "       }\n",
     "dframe = pd.DataFrame(data)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -217,40 +251,24 @@
      "output_type": "stream",
      "text": [
       "        Model  Data in k   Epoch 5  Epoch 10  Epoch 15  Epoch 20  Epoch 25  \\\n",
-      "0  U-Net-124M         17  0.738707  0.740565  0.741389  0.742022  0.742245   \n",
-      "1  U-Net-124M         35  0.740679  0.742451  0.742621  0.743642  0.743636   \n",
-      "2   U-Net-31M         17  0.737156  0.739929  0.740784  0.741493  0.741766   \n",
-      "3   U-Net-31M         35       NaN       NaN       NaN       NaN       NaN   \n",
-      "4    U-Net-8M         17  0.736704  0.738558  0.739344  0.740384  0.740602   \n",
-      "5    U-Net-8M         35  0.737606  0.740350  0.740922  0.741416  0.741769   \n",
-      "6  ViT-32M/10         17  0.720299  0.731087  0.733475  0.735902  0.737018   \n",
-      "7  ViT-32M/10         35  0.730447  0.736426  0.739093  0.740435  0.740769   \n",
-      "8   ViT-8M/10         17  0.718658  0.727574  0.730888  0.732166  0.733282   \n",
-      "9   ViT-8M/10         35       NaN       NaN       NaN       NaN  0.728151   \n",
+      "0  U-Net-124M         35  0.822547  0.824325  0.825340  0.825759  0.825764   \n",
+      "1  U-Net-124M         70  0.824407  0.826141  0.826622  0.826941  0.826943   \n",
+      "2    U-Net-8M         35  0.820521  0.821972  0.822993  0.823322  0.823633   \n",
+      "3    U-Net-8M         70  0.821049  0.823211  0.823914  0.824026  0.824442   \n",
+      "4  ViT-60M/10         35  0.820693  0.822939  0.823460  0.824148  0.824538   \n",
+      "5  ViT-60M/10         70  0.822081  0.824678  0.825656  0.826312  0.826746   \n",
+      "6   ViT-8M/10         35  0.811111  0.815896  0.817805  0.818891  0.819954   \n",
+      "7   ViT-8M/10         70  0.814857  0.819304  0.820588  0.821297  0.821693   \n",
       "\n",
-      "   Epoch 30  Epoch 35  Epoch 40  Epoch 45  Epoch 50  Epoch 55  Epoch 60  \\\n",
-      "0  0.741949  0.742486       NaN       NaN       NaN       NaN       NaN   \n",
-      "1  0.743659  0.743453       NaN       NaN       NaN       NaN       NaN   \n",
-      "2  0.741927  0.742328       NaN       NaN       NaN       NaN       NaN   \n",
-      "3       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "4  0.740878  0.741370       NaN       NaN       NaN       NaN       NaN   \n",
-      "5  0.741927  0.742436       NaN       NaN       NaN       NaN       NaN   \n",
-      "6  0.737716  0.738012  0.738300  0.738768  0.739024  0.739376  0.739523   \n",
-      "7  0.741670  0.742121  0.742425  0.742737  0.742939  0.743027  0.743039   \n",
-      "8  0.734864  0.735560  0.736223  0.736695  0.737119  0.737594  0.737605   \n",
-      "9  0.732729  0.735349  0.736524  0.737567  0.737979  0.738385  0.738791   \n",
-      "\n",
-      "   Epoch 65  Epoch 70  \n",
-      "0       NaN       NaN  \n",
-      "1       NaN       NaN  \n",
-      "2       NaN       NaN  \n",
-      "3       NaN  0.742936  \n",
-      "4       NaN       NaN  \n",
-      "5       NaN       NaN  \n",
-      "6  0.740426  0.740333  \n",
-      "7  0.743754  0.743747  \n",
-      "8  0.739089  0.739141  \n",
-      "9  0.739086  0.740213  \n"
+      "   Epoch 30  Epoch 35  Epoch 40  \n",
+      "0  0.825741  0.825519  0.825274  \n",
+      "1  0.826926  0.826792  0.826584  \n",
+      "2  0.823800  0.823891  0.823961  \n",
+      "3  0.824566  0.824711  0.824796  \n",
+      "4  0.824953  0.825106  0.825253  \n",
+      "5  0.826952  0.827226  0.827384  \n",
+      "6  0.820552  0.821067  0.821388  \n",
+      "7  0.822173  0.822522  0.822777  \n"
      ]
     }
    ],
@@ -260,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dframe.to_excel('./val_hist.xlsx', index = False)"
+    "dframe.to_excel('./val_hist_brain.xlsx', index = False)"
    ]
   },
   {
