--- a/Results/scaling/parameter_scaling.ipynb
+++ b/Results/scaling/parameter_scaling.ipynb
@@ -71,22 +71,12 @@
     "untm = Unet('m', useline=False)\n",
     "untl = Unet('l', useline=False)\n",
     "\n",
-    "\"\"\" Plot Brain \"\"\"\n",
-    "# ax.plot(60, brain_vit_060M, vitl.marker, markersize=vitl.ms, color=vitl.color, zorder=4)\n",
-    "# ax.plot(32, brain_vit_032M, vitm.marker, markersize=vitm.ms, color=vitm.color, zorder=2)\n",
-    "# ax.plot(8, brain_vit_008M, vits.marker, markersize=vits.ms,  color=vits.color, zorder=2)\n",
-    "# ax.plot(124, brain_unt_124M, untl.marker, markersize=untl.ms, color=untl.color, zorder=3)\n",
-    "# ax.plot(31, brain_unt_031M, untm.marker, markersize=untm.ms, color=untm.color, zorder=1)\n",
-    "# ax.plot(8, brain_unt_008M, unts.marker, markersize=unts.ms,  color=unts.color, zorder=1)\n",
+    "\"\"\" Plot \"\"\"\n",
     "ax.plot([8, 32, 60], [brain_vit_008M, brain_vit_032M, brain_vit_060M], vits.marker, markersize=vitm.ms, color=vitl.color, label='ViT', zorder=1)\n",
     "ax.plot([8, 31, 124], [brain_unt_008M, brain_unt_031M, brain_unt_124M], unts.marker, markersize=untm.ms, color=untl.color, label='U-Net', zorder=3)\n",
-    "# ax.fill_between(brain_train_data, brain_unt_124M, brain_unt_008M, alpha=0.1, color=untl.color)\n",
-    "# ax.fill_between(brain_train_data, brain_vit_060M, brain_vit_008M, alpha=0.1, color=vitl.color)\n",
     "ax.set_title('Model size scaling')\n",
     "ax.set_xticks([10, 30, 60, 120])\n",
     "ax.set_xticklabels(['10M', '30M', '60M', '120M'])\n",
-    "# ax.tick_params(axis='x', which='minor', bottom=False)\n",
-    "# ax.yaxis.set_ticks(np.arange(0.805, 0.83, 0.005))\n",
     "ax.legend()\n",
     "\n",
     "# Labels\n",
