--- a/imagenet_pretrain.ipynb
+++ b/imagenet_pretrain.ipynb
@@ -2,14 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f8b3e2db",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pytorch\n",
     "import torch\n",
-    "import torch.nn as nn\n",
     "from torchvision.utils import make_grid\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -24,25 +22,23 @@
     "from fastmri.losses import SSIMLoss\n",
     "from fastmri.models import Unet\n",
     "\n",
-    "# other stuff\n",
+    "# other\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm \n",
     "import PIL.Image as Image\n",
     "from glob import glob\n",
     "import myutils\n",
     "from mymodels import VisionTransformer, ReconNet\n",
-    "from mymodels.vision_transformer import * # needed for loading current save models, but ugly\n",
-    "import os\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = '3'\n",
+    "\n",
     "# Device\n",
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = '0'\n",
     "device = 'cuda'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55d7ce19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,20 +46,20 @@
     "    def __init__(self, isval=False):\n",
     "\n",
     "        if isval:\n",
-    "             # get path of each imagenet images\n",
+    "            ## combine paths of each imagenet validation image into a single list\n",
     "            self.files = [] \n",
     "            pattern   = \"*.JPEG\"        \n",
     "            for dir, _, _ in os.walk('/media/hdd1/ImageNet/ILSVRC/Data/CLS-LOC/val/'):\n",
     "                self.files.extend(glob(os.path.join(dir, pattern)))             \n",
-    "            # or in case paths are already saved\n",
+    "            # or uncomment following in case paths are already saved\n",
     "#             self.files = torch.load('./imagenet_filepaths_val.pt') \n",
     "        else:\n",
-    "            # get path of each imagenet images        \n",
+    "            ## combine paths of each imagenet training image into a single list       \n",
     "            self.files = []  # get path of each imagenet images\n",
     "            pattern   = \"*.JPEG\"        \n",
     "            for dir, _, _ in os.walk('/media/hdd1/ImageNet/ILSVRC/Data/CLS-LOC/train/'):\n",
     "                self.files.extend(glob(os.path.join(dir, pattern)))                 \n",
-    "            # or in case paths are already saved\n",
+    "            # or uncomment in case paths are already saved\n",
     "#             self.files = torch.load('./imagenet_filepaths_train.pt')    \n",
     "\n",
     "        self.transform = tvtransforms.Compose([      \n",
@@ -118,7 +114,7 @@
     "        x = y.squeeze()\n",
     "        x = torch.stack((x, torch.zeros_like(x)), -1)\n",
     "        kspace = fastmri.fft2c(x)\n",
-    "        ksapce = self.add_gaussian_noise(kspace)\n",
+    "#         kspace = self.add_gaussian_noise(kspace)\n",
     "        masked_kspace, _ = transforms.apply_mask(kspace, mask_func) \n",
     "        zero_fill = fastmri.ifft2c(masked_kspace)\n",
     "        x = fastmri.complex_abs(zero_fill)\n",
@@ -131,7 +127,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "796bb722",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,62 +137,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ded7be2",
    "metadata": {},
    "outputs": [],
    "source": [
     "ntrain = len(dataset)\n",
-    "train_dataset, test_dataset = torch.utils.data.random_split(dataset, [ntrain, len(dataset)-ntrain],generator=torch.Generator().manual_seed(42))"
+    "train_dataset, _ = torch.utils.data.random_split(dataset, [ntrain, len(dataset)-ntrain],generator=torch.Generator().manual_seed(42))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4176fea7",
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 32\n",
     "trainloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2, pin_memory=True,generator=torch.Generator().manual_seed(42))\n",
-    "# testloader = DataLoader(test_dataset, batch_size=1, shuffle=True, num_workers=1, pin_memory=True,generator=torch.Generator().manual_seed(42))\n",
     "valloader = DataLoader(val_dataset, batch_size=1, shuffle=True, num_workers=1, pin_memory=True,generator=torch.Generator().manual_seed(42))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6bb011c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(next(iter(valloader))[1][0][0], cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6963c20",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"Init Model\"\"\"\n",
     "# Vision Transformer\n",
     "avrg_img_size = 340\n",
-    "patch_size = 16\n",
-    "depth = 12\n",
+    "patch_size = 10\n",
+    "depth = 10\n",
     "num_heads = 16\n",
-    "embed_dim = 64\n",
-    "# gpsa_interval = [2, depth-1] # Convit\n",
-    "gpsa_interval = [-1, -1] # Vanilla Vit\n",
+    "embed_dim = 44\n",
     "\n",
     "net = VisionTransformer(\n",
     "    avrg_img_size=avrg_img_size, \n",
     "    patch_size=patch_size, \n",
     "    in_chans=1, embed_dim=embed_dim, \n",
-    "    depth=depth, num_heads=num_heads, mlp_ratio=4., \n",
-    "    gpsa_interval=gpsa_interval,\n",
-    "    use_pos_embed=True, qkv_bias=False,\n",
+    "    depth=depth, num_heads=num_heads,\n",
     "    )\n",
+    "\n",
     "\n",
     "# Unet\n",
     "# net = Unet(\n",
@@ -209,36 +187,19 @@
     "\n",
     "model = ReconNet(net).to(device)\n",
     "\n",
-    "print('#Params:', sum(p.numel() for p in model.parameters() if p.requires_grad))\n",
-    "print(model)\n",
-    "\n",
-    "# Set biases to zero\n",
+    "# Set biases to zero \n",
     "for name, param in model.named_parameters():\n",
     "    if name.endswith('.bias'):\n",
     "        nn.init.constant_(param, 0)\n",
     "        param.requires_grad = False\n",
     "            \n",
-    "    \n",
-    "\n",
-    "print('#Params:', sum(p.numel() for p in model.parameters() if p.requires_grad))"
+    "print('#Params:', sum(p.numel() for p in model.parameters() if p.requires_grad))\n",
+    "print(model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35cf7ee1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "checkpoint = torch.load('../Models/imgnet_pretrain_acc_150M_16epochlr1e-4.pth')\n",
-    "model = checkpoint['model']\n",
-    "model.load_state_dict(checkpoint['model_state_dict'],)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c331d977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,14 +220,13 @@
     "            'optimizer_state_dict': optimizer.state_dict(),\n",
     "        }\n",
     "        \n",
-    "    torch.save(train_hist, path + 'checkpoint_train.pt')\n",
+    "    torch.save(train_hist, path + 'train_hist.pt')\n",
     "    torch.save(checkpoint,  path + 'checkpoint.pth')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f6f5305",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,39 +245,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd99a4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Train VISION TRANSFORMER\"\"\"\n",
-    "for epoch in tqdm(range(0, 20)):  # loop over the dataset multiple times\n",
-    "    model.train()\n",
-    "    \n",
-    "    print(optimizer.param_groups[0]['lr'])      \n",
+    "\"\"\"Train\"\"\"\n",
+    "for epoch in range(0, 20):  # loop over the dataset multiple times\n",
+    "    model.train()  \n",
     "    train_loss = 0.0\n",
-    "    with tqdm(total=len(trainloader)) as pbar:\n",
-    "        for i, data in enumerate(trainloader):\n",
-    "            inputs, targets = data\n",
-    "            optimizer.zero_grad()\n",
-    "            outputs = model(inputs.to(device))\n",
-    "            loss = criterion(outputs, targets.to(device), torch.tensor([1.], device=device))\n",
-    "            loss.backward()\n",
-    "            nn.utils.clip_grad_norm_(model.parameters(), max_norm=1, norm_type=1, error_if_nonfinite=True)\n",
-    "            optimizer.step()\n",
-    "            pbar.update(1)\n",
+    "    for i, data in enumerate(trainloader):\n",
+    "        inputs, targets = data\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs.to(device))\n",
+    "        loss = criterion(outputs, targets.to(device), torch.tensor([1.], device=device))\n",
+    "        loss.backward()\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1, norm_type=1, error_if_nonfinite=True)\n",
+    "        optimizer.step()\n",
     "\n",
-    "            train_loss += loss.item()\n",
+    "        train_loss += loss.item()\n",
     "\n",
     "    scheduler.step()\n",
     "    train_hist.append(train_loss/len(trainloader))\n",
-    "    print('Epoch {}, Train loss.: {:0.4e}'.format(epoch+1, train_hist[-1]))\n",
-    "    save_model(path, model, train_hist, optimizer, scheduler=scheduler)"
+    "    save_model(path, model, train_hist, optimizer, scheduler=scheduler)\n",
+    "    print('Epoch {}, Train loss.: {:0.4e}'.format(epoch+1, train_hist[-1]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cce9b814",
    "metadata": {
     "scrolled": false
    },
@@ -449,7 +403,7 @@
     }
    ],
    "source": [
-    "\"\"\"Qualitative Performance\"\"\"\n",
+    "\"\"\"Example reconstructions\"\"\"\n",
     "valloader = DataLoader(val_dataset, batch_size=1, shuffle=True, num_workers=0, generator=torch.Generator().manual_seed(1))\n",
     "dataiter = iter(valloader)\n",
     "model.eval()\n",
@@ -478,7 +432,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74f67127",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -500,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
