--- a/fastmri_training.ipynb
+++ b/fastmri_training.ipynb
@@ -21,7 +21,7 @@
     "from fastmri.models import Unet\n",
     "\n",
     "# other\n",
-    "import myutils\n",
+    "from myutils import SSIM, PSNR\n",
     "from mymodels import VisionTransformer, ReconNet\n",
     "import os\n",
     "# Device\n",
@@ -178,8 +178,8 @@
     "def validate(model):\n",
     "    valloader = DataLoader(val_dataset, batch_size=1, shuffle=False, num_workers=0, pin_memory=True)   \n",
     "    model.eval()    \n",
-    "    ssim_ = myutils.SSIM().to(device)\n",
-    "    psnr_ = myutils.PSNR().to(device)\n",
+    "    ssim_ = SSIM().to(device)\n",
+    "    psnr_ = PSNR().to(device)\n",
     "    psnrs = []\n",
     "    ssims = []\n",
     "    \n",
@@ -299,6 +299,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "from myutils import imshow\n",
     "\n",
     "\"\"\"Example reconstructions\"\"\"\n",
     "valloader = DataLoader(val_dataset, batch_size=1, shuffle=True, num_workers=0, generator=torch.Generator().manual_seed(0))\n",
@@ -310,7 +311,7 @@
     "        inputs, targets, maxval = dataiter.next()\n",
     "        outputs = model(inputs.to(device)).cpu()\n",
     "        plt.figure(figsize=(15,7))\n",
-    "        myutils.imshow(make_grid([inputs[0], outputs[0], targets[0], (targets[0]-outputs[0]).abs()],normalize = True, value_range=(0,maxval[0]/1.5)))    \n",
+    "        imshow(make_grid([inputs[0], outputs[0], targets[0], (targets[0]-outputs[0]).abs()],normalize = True, value_range=(0,maxval[0]/1.5)))\n",
     "        plt.axis('off')\n",
     "        img_input = inputs[0].numpy()\n",
     "        img_recon = outputs[0].numpy()\n",
