--- a/imagenet_pretrain.ipynb
+++ b/imagenet_pretrain.ipynb
@@ -26,7 +26,6 @@
     "import random\n",
     "import PIL.Image as Image\n",
     "from glob import glob\n",
-    "import myutils\n",
     "from mymodels import VisionTransformer, ReconNet\n",
     "\n",
     "# Device\n",
@@ -403,6 +402,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "from myutils import imshow\n",
     "\n",
     "\"\"\"Example reconstructions\"\"\"\n",
     "valloader = DataLoader(val_dataset, batch_size=1, shuffle=True, num_workers=0, generator=torch.Generator().manual_seed(1))\n",
@@ -415,7 +415,7 @@
     "        outputs = model(inputs.to(device)).cpu()\n",
     "        inputs_ = inputs\n",
     "        plt.figure(figsize=(15,7))\n",
-    "        myutils.imshow(make_grid([inputs_[0], outputs[0], targets[0], (targets[0]-outputs[0]).abs()],normalize = True, value_range=(0,maxval[0])))    \n",
+    "        imshow(make_grid([inputs_[0], outputs[0], targets[0], (targets[0]-outputs[0]).abs()],normalize = True, value_range=(0,maxval[0])))    \n",
     "        plt.axis('off')\n",
     "        img_input = inputs_[0].numpy()\n",
     "        img_noise = outputs[0].numpy()\n",
